<resources>
    <string name="app_name">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Main_titel">Wegmisbruiker gezien spot hem nu!</string>
    <string name="action_settings">Settings</string>
    <string name="Omschrijving">Beschrijf het voorval</string>
    <string name="Merk">Merk</string>
    <string name="Ergenis">Ergenis</string>
    <string name="Selecteer_locatie">Selecteer locatie</string>
    <string name="title_activity_all_spots">All Spots</string>

    <string name="Meer_info"><u>Klik voor meer info</u></string>
    <string name="facebook_app_id">350724478659951</string>
    <string name="title_activity_rankings">Rankings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
