<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_spot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.wegmisbruikspotter.maps.Spot">

        <TextView
            android:text="@string/Main_titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:id="@+id/Title"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/kenteken"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_below="@+id/Title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/kentekenplaat"
            android:cursorVisible="true"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="Kenteken"
            android:inputType="textCapCharacters"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/font_size"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ.....012345789"
            android:maxLength="6" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/ergernis"
            style="?attr/spinnerStyle"
            android:background="@android:drawable/btn_dropdown"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/kenteken"
            app:layout_constraintRight_toRightOf="parent"
            android:spinnerMode="dialog"
            android:prompt="@string/Ergenis"
            android:layout_below="@+id/kenteken"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txtDescription"


            android:background="@drawable/edittext_border"
            android:hint="@string/Omschrijving"
            android:layout_below="@+id/Merk"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:paddingTop="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="top|center_vertical|center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/Merk"
            android:prompt="@string/Merk"
            style="@style/Platform.Widget.AppCompat.Spinner"
            android:background="@android:drawable/btn_dropdown"
            tools:layout_editor_absoluteX="293dp"
            app:layout_constraintTop_toBottomOf="@+id/ergernis"
            android:spinnerMode="dialog"
            android:layout_below="@+id/ergernis"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <Button
            android:text="@string/Selecteer_locatie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="Selecteer"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:layout_below="@+id/txtDescription"
            android:layout_alignLeft="@+id/txtDescription"
            android:layout_alignStart="@+id/txtDescription" />

        <Button
            android:text="Voeg foto toe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:drawableLeft="@drawable/ic_menu_camera"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_alignRight="@+id/txtDescription"
            android:layout_alignEnd="@+id/txtDescription"
            android:onClick="pickImage" />

        <Button
            android:text="Spot nu!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:id="@+id/btnZoek"
            android:textSize="24sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="?android:attr/colorPressedHighlight"
            android:onClick="Spot" />

        <ImageView
            android:id="@+id/foto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_above="@+id/btnZoek"
            android:layout_alignRight="@+id/button3"
            android:layout_alignEnd="@+id/button3" />

</RelativeLayout>


